apps/immich/deployment-immich-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:17-vectorchord0.5.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
            - name: dshm
              mountPath: /dev/shm
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 2Gi
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: immich-db
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 128Mi
