apps/immich/service-immich-machine-learning.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: 3003
  selector:
    app: immich-machine-learning
