apps/immich/service-immich-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
      name: http
  selector:
    app: immich-server
