apps/immich/ingressroute-immich.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.xrs444.net`)
      kind: Rule
      services:
        - name: immich-server
          port: 3001
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
